--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -18,6 +18,6 @@ dependencies:
   Adafruit_INA260:
     git: https://github.com/xl9p/Adafruit_INA260.git
     version: master
-  Sparkfun_ADXL345:
+  SparkFun_ADXL345:
     git: https://github.com/xl9p/SparkFun_ADXL345_Arduino_Library.git
     version: i2c_custom_mod
