--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 	path = components/CSE_GNSS
 	url = https://github.com/xl9p/CSE_GNSS.git
 
+[submodule "components/Adafruit_NeoPixel"]
+	path = components/Adafruit_NeoPixel
+	url = git@github.com:adafruit/Adafruit_NeoPixel.git
