Build files update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,11 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
+set(ENV{ARDUINO_SKIP_TICK_CHECK} 1)
+add_definitions(
+-DARDUINO_USB_MODE
+-DARDUINO_USB_CDC_ON_BOOT
+)
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(smart-dog-collar_tracker)
+project(node-firmware)
