--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 	path = components/Adafruit_NeoPixel
 	url = git@github.com:xl9p/Adafruit_NeoPixel.git
 	branch = v1.12.3_with_build_files
+[submodule "components/Bosch-BME68x-Library"]
+	path = components/Bosch-BME68x-Library
+	url = git@github.com:xl9p/Bosch-BME68x-Library.git
+[submodule "components/Bosch-BSEC2-Library"]
+	path = components/Bosch-BSEC2-Library
+	url = git@github.com:xl9p/Bosch-BSEC2-Library.git
