--- a/.gitmodules
+++ b/.gitmodules
@@ -34,9 +34,9 @@
 	path = components/Adafruit_NeoPixel
 	url = git@github.com:xl9p/Adafruit_NeoPixel.git
 	branch = v1.12.3_with_build_files
-[submodule "components/Bosch-BME68x-Library"]
-	path = components/Bosch-BME68x-Library
-	url = git@github.com:xl9p/Bosch-BME68x-Library.git
-[submodule "components/Bosch-BSEC2-Library"]
-	path = components/Bosch-BSEC2-Library
-	url = git@github.com:xl9p/Bosch-BSEC2-Library.git
+[submodule "components/BME68xLibrary"]
+	path = components/BME68xLibrary
+	url = git@github.com:xl9p/BME68xLibrary.git
+[submodule "components/BSEC2Library"]
+	path = components/BSEC2Library
+	url = git@github.com:xl9p/BSEC2Library.git
