--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     "[c]": {
         "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
     },
+    "terminal.integrated.scrollback": 100000000,
     "editor.formatOnSave": true,
     "editor.formatOnType": true,
     "editor.tabSize": 2,
