Update to MeasurementModule Added hooks for various events Added a helper class for the measuring function and updated its signature Change to the MeasurementTask lifecycle management (not sure about this one) Added json library dependency

--- a/components/MeasurementModule/CMakeLists.txt
+++ b/components/MeasurementModule/CMakeLists.txt
@@ -6,5 +6,5 @@ SET(MeasurementModule ${MeasurementModuleSource})
 # Include the component's include directories
 idf_component_register( SRCS ${MeasurementModule}
     INCLUDE_DIRS include
-    REQUIRES arduino EventSystem
+    REQUIRES arduino EventSystem bblanchon__arduinojson
 )
