--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/main/*.*)
 
-idf_component_register(SRCS ${app_sources} INCLUDE_DIRS "." REQUIRES MeasurementModule EventSystem BME6xxManager FSManager BME68xLibrary BSEC2Library pubsubclient bblanchon__arduinojson)
+idf_component_register(SRCS ${app_sources} INCLUDE_DIRS "." REQUIRES RTClib MeasurementModule EventSystem BME6xxManager FSManager BME68xLibrary BME69xLibrary  BSEC2Library pubsubclient bblanchon__arduinojson)
 
 littlefs_create_partition_image(littlefs littlefs FLASH_IN_PROJECT)
