--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,23 @@
 {
-    "clangd.path": "/opt/esp/tools/esp-clang/15.0.0-23786128ae/esp-clang/bin/clangd",
-    "clangd.arguments": [
-        "--enable-config",
-        "--background-index",
-        "--clang-tidy",
-        "--header-insertion=never",
-        "--suggest-missing-includes",
-        "--pch-storage=memory",
-        "--compile-commands-dir=${workspaceFolder}/build.clang",
-        "--fallback-style=none"
-    ],
-    "C_Cpp.intelliSenseEngine": "disabled",
-    "[cpp]": {
-        "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
-    },
-    "[c]": {
-        "editor.defaultFormatter": "llvm-vs-code-extensions.vscode-clangd"
-    },
+    // "clangd.path": "/opt/esp/tools/esp-clang/15.0.0-23786128ae/esp-clang/bin/clangd",
+    // "clangd.arguments": [
+    //     "--enable-config",
+    //     "--background-index",
+    //     "--clang-tidy",
+    //     "--header-insertion=never",
+    //     "--suggest-missing-includes",
+    //     "--pch-storage=memory",
+    //     "--compile-commands-dir=${workspaceFolder}/build.clang",
+    //     "--fallback-style=none"
+    // ],
+    "C_Cpp.intelliSenseEngine": "default",
     "terminal.integrated.scrollback": 100000000,
     "editor.formatOnSave": true,
     "editor.formatOnType": true,
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
     "editor.indentSize": 2,
+    "git.detectSubmodulesLimit": 30,
     "idf.adapterTargetName": "esp32s3",
     "idf.openOcdConfigs": [
         "board/esp32s3-builtin.cfg"
@@ -74,11 +69,67 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "unordered_set": "cpp",
+        "rope": "cpp",
+        "slist": "cpp",
+        "mutex": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stacktrace": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp",
+        "any": "cpp",
+        "barrier": "cpp",
+        "bitset": "cpp",
+        "cfenv": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "codecvt": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "coroutine": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cuchar": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "expected": "cpp",
+        "netfwd": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "source_location": "cpp",
+        "fstream": "cpp",
+        "future": "cpp",
+        "iomanip": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "latch": "cpp",
+        "scoped_allocator": "cpp",
+        "semaphore": "cpp",
+        "shared_mutex": "cpp",
+        "spanstream": "cpp",
+        "sstream": "cpp",
+        "stop_token": "cpp",
+        "syncstream": "cpp",
+        "thread": "cpp",
+        "typeindex": "cpp"
     },
     "idf.pythonInstallPath": "/opt/esp/python_env/idf5.1_py3.8_env/bin/python",
     "idf.customExtraVars": {
         "IDF_TARGET": "esp32s3"
-    } //,
+    },
+    "C_Cpp.errorSquiggles": "enabled",
+    "editor.formatOnSaveMode": "modifications",
+    "C_Cpp.copilotHover": "disabled",
+    "chat.agent.enabled": false,
+    "chat.agent.maxRequests": 0,
+    "chat.commandCenter.enabled": false,
+    "chat.focusWindowOnConfirmation": false,
+    "telemetry.feedback.enabled": false //,
     // "idf.svdFilePath": "${workspaceFolder}/svd-main/svd/${IDF_TARGET}.svd"
 }
