Encapsulated some parts of the application into their own modules

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,9 +1,18 @@
 file(GLOB_RECURSE APP_SRCS
   "*.*"
+  "modules/*/*.c"
+  "modules/*/*.cpp"
 )
+
 
 list(APPEND INCLUDE_DIRS
   "."
+)
+
+list(APPEND INCLUDE_DIRS
+  "modules/mqtt_transmission_module"
+  "modules/bme_sample_module"
+  "modules/tgs_sample_module"
 )
 
 idf_component_register(
