--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -5,8 +5,6 @@ dependencies:
   BME69xLibrary: ^0.0.1
   BME68xLibrary: ^0.0.1
   ADS1X15: ^0.0.1
-  Adafruit_BusIO: ^0.0.1
-  Adafruit_Sensor: ^0.0.1
   cbor_sensor_encoder: ^0.0.1
-  mqtt_module: ^0.0.1
-  sntp_module: ^0.0.1
+  mqtt_client_simple: ^0.0.1
+  sntp_client: ^0.0.1
